# ProjetoAED

./: CMakeLists.txt  README.md  alteracao.cpp  estudante.cpp  estudante.h  gestaohorarios.cpp  gestaohorarios.h  gestor.cpp  gestor.h  helper.cpp  helper.h  main.cpp  pedido.cpp  pedido.h  slot.cpp  slot.h  turmah.cpp  turmah.h  ucturma.cpp  ucturma.h
codigo/: main.cpp
codigo/src/: cli.cpp  estudante.cpp  estudante.h  pedido.cpp  readFiles.cpp  readFiles.h  slot.cpp  slot.h  ucturma.cpp  ucturma.h
docs/html/: alteracao_8h_source.html  annotated.html  class_alteracao-members.html  class_alteracao.html  class_estudante-members.html  class_estudante.html  class_gestor_de_horarios-members.html  class_gestor_de_horarios.html  class_pedido-members.html  class_pedido.html  class_slot-members.html  class_slot.html  class_turma_h-members.html  class_turma_h.html  class_uc_turma-members.html  class_uc_turma.html  classcli-members.html  classcli.html  classes.html  classread_files-members.html  classread_files.html  cli_8h_source.html  dir_0ddbc3e8df2af01f4055036569641665.html  dir_15b34c131aaf752af893ac08df4f1bb3.html  dir_1e619f8a007e86ac1daed03680fc3af1.html  dir_2dbd5e3d58492e26c2035b78ce7b68e7.html  dir_4c7bed6e7bf673a77dbc110eeb374297.html  dir_d522931ffa1371640980b621734a4381.html  dir_f612f95adc50ffdff8cad495001e0029.html  (+11 more)
src/: alteracao.cpp  alteracao.h  cli.cpp  cli.h  estudante.cpp  estudante.h  gestordehorarios.cpp  gestordehorarios.h  helper.cpp  pedido.cpp  pedido.h  readFiles.cpp  readFiles.h  slot.cpp  slot.h  turmah.cpp  turmah.h  ucturma.cpp  ucturma.h
(+33 files in other folders)
