cmake_minimum_required(VERSION 3.23)
project(Projeto)

set(CMAKE_CXX_STANDARD 14)

add_executable(Projeto
        .idea/.gitignore
        .idea/modules.xml
        .idea/Projeto.iml
        .idea/workspace.xml
        classes.csv
        classes_per_uc.csv
        students_classes.csv
        main.cpp)
